--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: typos
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Implements common typing errors for common functions
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Michael A Barrowman
+Maintainer: Michael A Barrowman <myko101ab@gmail.com>
+Description: Package contains functions that act as wrappers
+  around commonly misspelled function calls
+License: CC0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2.9000
+RoxygenNote: 7.1.0.9000
+Roxygen: list(markdown = TRUE)
