--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: typos
 Type: Package
-Title: Implements common typing errors for common functions
+Title: Generate and use typo functions
 Version: 0.1.0
-Author: Michael A Barrowman
+Authors@R: person("Michael A", "Barrowman", email="myko101ab@gmail.com",role=c("aut","cre"))
 Maintainer: Michael A Barrowman <myko101ab@gmail.com>
-Description: Package contains functions that act as wrappers
-  around commonly misspelled function calls
+Description: A package designed to help users beat common typos
 License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0.9000
 Roxygen: list(markdown = TRUE)
+Import: rlang
+Suggests: 
+    testthat
+
