Added typos transmutate & lenght

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(.typo)
 export(.typo_alert)
 export(fitler)
 export(geom_warp)
+export(lenght)
 export(nameS)
+export(transmutate)
 export(typoef)
