--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -1,7 +1,6 @@
 on:
   push:
-    paths:
-      - README.Rmd
+    branches: master
 
 name: Render README
 
@@ -13,11 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
-      - name: Install rmarkdown
-        run: Rscript -e 'install.packages("rmarkdown")'
-      - name: Render README
-        run: Rscript -e 'rmarkdown::render("README.Rmd")'
+      - name: Install current package
+        run: R CMD INSTALL
+      - name: Run Setup File
+        run: Rscript "setup.R"
       - name: Commit results
         run: |
-          git commit README.md -m 'Re-build README.Rmd' || echo "No changes to commit"
+          git commit README.md -m 'Auto-Rendered Package' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
