--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
+        with:
+          r-version: '3.6.3'
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install current package
         run: R CMD INSTALL .
