--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -1,38 +1,25 @@
 on:
   push:
-    branches: master
+    paths:
+      - README.Rmd
 
-name: Auto-render package
+name: Render README
 
 jobs:
   render:
-    name: Auto-render package
+    name: Render README
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-        with:
-          r-version: '3.6.3'
       - uses: r-lib/actions/setup-pandoc@v1
-      - name: Install rlang
-        run: Rscript -e 'install.packages("rlang")'
-      - name: Install devtools
-        run: Rscript -e 'install.packages("devtools")'
-      - name: Install pkgdown
-        run: Rscript -e 'install.packages("pkgdown")'
       - name: Install rmarkdown
         run: Rscript -e 'install.packages("rmarkdown")'
-      - name: Installing typos
+      - name: Install mutils
         run: R CMD INSTALL .
-      - name: Run Setup File
-        run: Rscript 'MakeTypos.R'
-      - name: Rewrite documentation
-        run: Rscript -e 'devtools::document()'
-      - name: Render README
+      - name: Render READMEuse_
         run: Rscript -e 'rmarkdown::render("README.Rmd")'
-      - name: Build Site
-        run: Rscript -e 'pkgdown::build_site()'
       - name: Commit results
         run: |
-          git commit README.md -m 'Auto-Rendered Package' || echo "No changes to commit"
+          git commit README.md -m 'Re-build README.Rmd' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
