--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,21 @@
 Package: typos
-Type: Package
 Title: Generate and use typo functions
-Version: 0.1.0.9001
-Authors@R: person("Michael A", "Barrowman", email="myko101ab@gmail.com",role=c("aut","cre"))
-Maintainer: Michael A Barrowman <myko101ab@gmail.com>
-Description: A package designed to help users beat common typos
-License: CC0
+Version: 0.1.0.9002
+URL: https://michaelbarrowman.co.uk/typos, https://github.com/MyKo101/typos
+Authors@R: 
+    person(given = "Michael",
+           family = "Barrowman",
+           role = c("aut", "cre"),
+           email = "myko101ab@gmail.com",
+           comment = c(ORCID = "0000-0003-0718-4482"))
+Description: Resource to help users beat common typos. Provides typo wrapper
+    functions around the correctly spelled functions.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0.9000
 Roxygen: list(markdown = TRUE)
-Import: rlang
+RoxygenNote: 7.1.0.9000
 Suggests: 
-    testthat
-Collate:
-  "typo-functions.R"
-  "Exported-typos.R"
-  "typos.R"
-  "utils.R"
+    roxygen2
 Imports: 
-    rlang
+    rlang (>= 0.1.2)
