--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 2.9.1.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
 articles: []
-last_built: 2020-04-29T12:21Z
+last_built: 2020-05-18T21:03Z
+urls:
+  reference: https://michaelbarrowman.co.uk/typos/reference
+  article: https://michaelbarrowman.co.uk/typos/articles
 
