--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,16 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0.9000
 Suggests: 
-    roxygen2
+    roxygen2,
+    ggplot2,
+    dplyr
 Imports: 
-    rlang (>= 0.1.2)
+    rlang (>= 0.1.2),
+    usethis
 Collate:
   "utils-tidy-eval.R"
   "typo-functions.R"
   "Exported-typos.R"
   "typos.R"
   "utils.R"
+  "MakeTypos.R"
