--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: typos
 Title: Generate and use typo functions
-Version: 0.1.0.9002
+Version: 0.1.0.9003
+Date: 2020-06-14
 URL: https://michaelbarrowman.co.uk/typos, https://github.com/MyKo101/typos
 Authors@R: 
     person(given = "Michael",
