--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -15,9 +15,13 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install rmarkdown
         run: Rscript -e 'install.packages("rmarkdown")'
-      - name: Install mutils
+      - name: Install remotes
+        run: Rscript -e 'install.packages("remotes")'
+      - name: Install Dependencies
+        run: Rscript -e 'remotes::install_deps(dependencies = TRUE)'
+      - name: Install typos
         run: R CMD INSTALL .
-      - name: Render READMEuse_
+      - name: Render README
         run: Rscript -e 'rmarkdown::render("README.Rmd")'
       - name: Commit results
         run: |
